Aula 53 - Mais sobre elementos

--- a/3. CSS3 Intermediário & Avançado/Aula 53 - Mais sobre seletores/index.html
+++ b/3. CSS3 Intermediário & Avançado/Aula 53 - Mais sobre seletores/index.html
@@ -46,7 +46,7 @@
     <div>
         <h1>Testando o irmão adjacente</h1>
         <p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed accumsan a urna nec tincidunt.</p>
-        <p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed accumsan a urna nec tincidunt.</p>
+        <p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed accumsan a urna nec tincidunt..</p>
     </div>
     <hr>
 
