Projeto 4 - Layout em colunas parte 1

--- a/3. CSS3 Intermediário & Avançado/Projeto 4 - Site de Notícias Cidade/index.html
+++ b/3. CSS3 Intermediário & Avançado/Projeto 4 - Site de Notícias Cidade/index.html
@@ -21,6 +21,16 @@
                 <li><a id="fotos" href="fotos.html">Fotos</a></li>
             </ul>
         </div>
+        <div id="conteudo">
+            <div id="primario">Primário</div>
+            <div id="secundario">Secundário</div>
+            <div id="lateral">Lateral</div>
+        </div>
+    </div>
+    <div id="container-rodape" style="clear: both;">
+        <div id="rodape">
+            &copy; Copyright 2014 - 2018 Notícias Cidade
+        </div>
     </div>
 </body>
 </html>
