--- a/3. CSS3 Intermediário & Avançado/Projeto 4 - Site de Notícias Cidade/index.html
+++ b/3. CSS3 Intermediário & Avançado/Projeto 4 - Site de Notícias Cidade/index.html
@@ -7,7 +7,7 @@
     <title>Notícias Cidade</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="home">
+<body id="tres-colunas" class="home">
     <div id="container">
         <div id="topo">
             <img class="logo" src="imagens/logo.png">
@@ -22,9 +22,30 @@
             </ul>
         </div>
         <div id="conteudo">
-            <div id="primario">Primário</div>
-            <div id="secundario">Secundário</div>
-            <div id="lateral">Lateral</div>
+            <div id="primario">
+                <div class="caixa">
+                    <h2>Entrevistas</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo
+                    </div>
+                </div>
+            </div>
+            <div id="secundario">
+                <div class="caixa">
+                    <h2>Entrevistas</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo
+                    </div>
+                </div>
+            </div>
+            <div id="lateral">
+                <div class="caixa">
+                    <h2>Entrevistas</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div id="container-rodape" style="clear: both;">
