--- a/3. CSS3 Intermediário & Avançado/Projeto 4 - Site de Notícias Cidade/index.html
+++ b/3. CSS3 Intermediário & Avançado/Projeto 4 - Site de Notícias Cidade/index.html
@@ -42,7 +42,30 @@
                 <div class="caixa">
                     <h2>Entrevistas</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo
+                        <ul>
+                            <li><a href="">José Almeida</a></li>
+                            <li><a href="">Felipe Silva</a></li>
+                            <li><a href="">Renato Rodrigues</a></li>
+                            <li><a href="">Abelardo Silveira</a></li>
+                            <li><a href="">André Carlos</a></li>
+                            <li><a href="">Márcio Mello</a></li>
+                            <li><a href="">João Pedro</a></li>
+                            <li><a href="">Fernando Weiss</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="caixa">
+                    <h2>News</h2>
+                    <div class="caixa-conteudo">
+                        <form>
+                            <div>
+                                <label for="email">Email:</label>
+                                <input type="email" name="email" id="email" placeholder="E-mail">
+                            </div>
+                            <div>
+                                <input type="submit" class="submit" value="Cadastrar">
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
