--- a/3. CSS3 Intermediário & Avançado/Projeto 4 - Site de Notícias Cidade/index.html
+++ b/3. CSS3 Intermediário & Avançado/Projeto 4 - Site de Notícias Cidade/index.html
@@ -15,7 +15,7 @@
                 <li class="primeiro"><a id="home" href="index.html">Home</a></li>
                 <li><a id="brasil" href="brasil.html">Brasil</a></li>
                 <li><a id="internacional" href="internacional.html">Internacional</a></li>
-                <li><a id="economia" href="saude.html">Economia</a></li>
+                <li><a id="economia" href="economia.html">Economia</a></li>
                 <li><a id="saude" href="saude.html">Saúde</a></li>
                 <li><a id="ciencia" href="ciencia.html">Ciência</a></li>
                 <li><a id="fotos" href="fotos.html">Fotos</a></li>
@@ -24,17 +24,93 @@
         <div id="conteudo">
             <div id="primario">
                 <div class="caixa">
-                    <h2>Entrevistas</h2>
+                    <h2>Destaque</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo
+                        <h3 class="destaque">NOVA LEGISLAÇÃO</h3>
+                        <img class="imagem-principal" src="imagens/taxi.jpg" width="100%;">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tristique magna.</p>
+                        <a href="">Leia mais</a>
+                    </div>
+                </div>
+                <div class="caixa">
+                    <h2>Mundo</h2>
+                    <div class="caixa-conteudo">
+                        <ul id="lista-noticias">
+                            <li>
+                                <a href="">
+                                    <img src="imagens/tecnologia.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/tecnologia.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/tecnologia.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/tecnologia.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
             <div id="secundario">
                 <div class="caixa">
-                    <h2>Entrevistas</h2>
+                    <h2>Última entrevista</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo
+                        <h3 class="ultima-entrevista">Entrevista com Felipe Silva</h3>
+                        <img class="imagem-principal" src="imagens/doutor.jpg" width="100%;">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tristique magna.</p>
+                        <a href="">Leia mais</a>
+                    </div>
+                </div>
+                <div class="caixa">
+                    <h2>Notícias recentes</h2>
+                    <div class="caixa-conteudo">
+                        <ul id="lista-noticias">
+                            <li>
+                                <a href="">
+                                    <img src="imagens/cidade.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/taxi.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/tecnologia.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/doutor.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
