--- a/3. CSS3 Intermediário & Avançado/Projeto 4 - Site de Notícias Cidade/ciencia.html
+++ b/3. CSS3 Intermediário & Avançado/Projeto 4 - Site de Notícias Cidade/ciencia.html
@@ -7,7 +7,7 @@
     <title>Notícias Cidade</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="ciencia">
+<body id="tres-colunas" class="ciencia">
     <div id="container">
         <div id="topo">
             <img class="logo" src="imagens/logo.png">
@@ -15,11 +15,141 @@
                 <li class="primeiro"><a id="home" href="index.html">Home</a></li>
                 <li><a id="brasil" href="brasil.html">Brasil</a></li>
                 <li><a id="internacional" href="internacional.html">Internacional</a></li>
-                <li><a id="economia" href="saude.html">Economia</a></li>
+                <li><a id="economia" href="economia.html">Economia</a></li>
                 <li><a id="saude" href="saude.html">Saúde</a></li>
                 <li><a id="ciencia" href="ciencia.html">Ciência</a></li>
                 <li><a id="fotos" href="fotos.html">Fotos</a></li>
             </ul>
+        </div>
+        <div id="conteudo">
+            <div id="primario">
+                <div class="caixa">
+                    <h2>Destaque</h2>
+                    <div class="caixa-conteudo">
+                        <h3 class="destaque">NOVA LEGISLAÇÃO</h3>
+                        <img class="imagem-principal" src="imagens/taxi.jpg" width="100%;">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tristique magna.</p>
+                        <a href="">Leia mais</a>
+                    </div>
+                </div>
+                <div class="caixa">
+                    <h2>Mundo</h2>
+                    <div class="caixa-conteudo">
+                        <ul id="lista-noticias">
+                            <li>
+                                <a href="">
+                                    <img src="imagens/tecnologia.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/tecnologia.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/tecnologia.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/tecnologia.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div id="secundario">
+                <div class="caixa">
+                    <h2>Última entrevista</h2>
+                    <div class="caixa-conteudo">
+                        <h3 class="ultima-entrevista">Entrevista com Felipe Silva</h3>
+                        <img class="imagem-principal" src="imagens/doutor.jpg" width="100%;">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tristique magna.</p>
+                        <a href="">Leia mais</a>
+                    </div>
+                </div>
+                <div class="caixa">
+                    <h2>Notícias recentes</h2>
+                    <div class="caixa-conteudo">
+                        <ul id="lista-noticias">
+                            <li>
+                                <a href="">
+                                    <img src="imagens/cidade.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/taxi.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/tecnologia.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/doutor.jpg" width="80">
+                                    <h3>Novas técnologias</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div id="lateral">
+                <div class="caixa">
+                    <h2>Entrevistas</h2>
+                    <div class="caixa-conteudo">
+                        <ul>
+                            <li><a href="">José Almeida</a></li>
+                            <li><a href="">Felipe Silva</a></li>
+                            <li><a href="">Renato Rodrigues</a></li>
+                            <li><a href="">Abelardo Silveira</a></li>
+                            <li><a href="">André Carlos</a></li>
+                            <li><a href="">Márcio Mello</a></li>
+                            <li><a href="">João Pedro</a></li>
+                            <li><a href="">Fernando Weiss</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="caixa">
+                    <h2>News</h2>
+                    <div class="caixa-conteudo">
+                        <form>
+                            <div>
+                                <label for="email">Email:</label>
+                                <input type="email" name="email" id="email" placeholder="E-mail">
+                            </div>
+                            <div>
+                                <input type="submit" class="submit" value="Cadastrar">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="container-rodape" style="clear: both;">
+        <div id="rodape">
+            &copy; Copyright 2014 - 2018 Notícias Cidade
         </div>
     </div>
 </body>
