--- a/3. CSS3 Intermediário & Avançado/Projeto 5 - Chalé Hotel/index.html
+++ b/3. CSS3 Intermediário & Avançado/Projeto 5 - Chalé Hotel/index.html
@@ -24,14 +24,55 @@
                         <a href="">Reservar</a>
                         <div style="clear:both;"></div>
                     </div>
+                    <div id="menu">
+                        <ul id="navegacao"">
+                            <li><a href="">Home</a></li>
+                            <li><a href="">História</a></li>
+                            <li><a href="">Imprensa</a></li>
+                            <li><a href="">Gastronomia</a></li>
+                            <li><a href="">Contato</a></li>
+                        </ul>
+                        <img class="depoimento" src="imagens/depoimento.png">
+                    </div>
                 </div>
             </div>
         </div>
-        <div id="conteudo">
-            conteudo
+        <div id="area-principal">
+            <div class="conteudo">
+                <h2>Lorem ipsum dolor sit amet</h2>
+                <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pretium iaculis nunc. Cras mattis nibh vitae nunc consectetur venenatis. Proin vestibulum blandit semper. Etiam at purus ultricies, accumsan lacus nec, vehicula sem. Nulla ut orci metus. Proin et rhoncus elit. Cras pretium enim id diam pretium, eu tristique velit laoreet. Nulla eget eros est. Suspendisse et convallis libero, vitae convallis urna. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nunc elit nulla, ornare et laoreet ac, egestas ut ex. In hac habitasse platea dictumst.</p>
+                <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pretium iaculis nunc. Cras mattis nibh vitae nunc consectetur venenatis. Proin vestibulum blandit semper. Etiam at purus ultricies, accumsan lacus nec, vehicula sem. Nulla ut orci metus. Proin et rhoncus elit. Cras pretium enim id diam pretium, eu tristique velit laoreet. Nulla eget eros est. Suspendisse et convallis libero, vitae convallis urna. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nunc elit nulla, ornare et laoreet ac, egestas ut ex. In hac habitasse platea dictumst.</p>
+            </div>
+        </div>
+        <div id="area-lateral">
+            <div class="conteudo">
+                <ul id="beneficios">
+                    <li>
+                        <a href="">
+                            <img src="imagens/apartamento.jpg" width="150">
+                            <h3>A ipsum dolor sit amet</h3>
+                            <p>et ultrices posuere cubilia curae; Nunc elit nulla, ornare et laoreet ac, egestas ut ex. In hac habitasse</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="imagens/restaurante.jpg" width="150">
+                            <h3>A ipsum dolor sit amet</h3>
+                            <p>et ultrices posuere cubilia curae; Nunc elit nulla, ornare et laoreet ac, egestas ut ex. In hac habitasse</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="imagens/piscina.jpg" width="150">
+                            <h3>A ipsum dolor sit amet</h3>
+                            <p>et ultrices posuere cubilia curae; Nunc elit nulla, ornare et laoreet ac, egestas ut ex. In hac habitasse</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div id="rodape">
-            rodape
+            <span>&copy; Copyright 2014 Chalé Hotel</span>
         </div>
     </div>
 </body>
