Projeto 10 - App Mata Mosquito - Concluído

--- a/6. Java Script/Projeto 10 - App Game Mata Mosquito/index.html
+++ b/6. Java Script/Projeto 10 - App Game Mata Mosquito/index.html
@@ -1,27 +1,55 @@
-<html>
-	<head>
-		<title>Mata Mosquito</title>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fim de jogo</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <script src="script.js"></script>
-	</head>
-  <body onresize="ajustaTamanhoTela()">
-
-    <div class="painel">
-      <div class="vidas">
-        <img src="imagens/coracao_cheio.png">
-        <img src="imagens/coracao_cheio.png">
-        <img src="imagens/coracao_cheio.png">
-      </div>
-      <div class="cronometro">
-        Tempo restante: ?
-      </div>
-    </div>
-
     <script>
-      setInterval(function(){
+        function iniciarJogo(){
+            var nivel = document.getElementById('nivel').value;
 
-        posicaoRandomica()
-      }, 1000)
+            if(nivel === ''){
+                alert('Você precisa selecionar um nivel para iniciar o jogo');
+                return false;
+            }
+
+            window.location.href = "app.html?" + nivel;
+        }
     </script>
-  </body>
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="d-flex justify-content-center">
+                    <img src="imagens/game.png">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="d-flex justify-content-center">
+                    <div class="mb-2">
+                        <select class="form-control" id="nivel">
+                            <option value="">-> Selecione um nivel <-</option>
+                            <option value="normal">Normal</option>
+                            <option value="dificil">Difícil</option>
+                            <option value="chucknorris">Chuck Norris</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="d-flex justify-content-center">
+                    <button type="button" class="btn btn-danger btn-lg" onclick="iniciarJogo()">Iniciar jogo</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
