--- a/7. JavaScript Moderno (ECMAScript 2015 - ES6) e Orientação a Objetos/Projeto 11 - App Orçamento Pessoal/consulta.html
+++ b/7. JavaScript Moderno (ECMAScript 2015 - ES6) e Orientação a Objetos/Projeto 11 - App Orçamento Pessoal/consulta.html
@@ -12,7 +12,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <script src="javascript/script.js"></script>
 	</head>
-  <body>
+  <body onload="carregaListaDespesas()">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -43,7 +43,9 @@
         <div class="col-md-2">
           <select class="form-control" id="ano">
             <option value="">Ano</option>
-            <option value="2018">2018</option>
+            <option value="2020">2020</option>
+            <option value="2021">2021</option>
+            <option value="2022">2022</option>
           </select>
         </div>
         <div class="col-md-2">
@@ -68,7 +70,7 @@
         </div>
         <div class="col-md-6">
           <select class="form-control" id="tipo">
-            <option>Tipo</option>
+            <option value="">Tipo</option>
             <option value="1">Alimentação</option>
             <option value="2">Educação</option>
             <option value="3">Lazer</option>
@@ -85,7 +87,7 @@
           <input type="text" class="form-control" placeholder="Valor" id="valor" />
         </div>
         <div class="col-md-2 d-flex justify-content-end">
-          <button type="button" class="btn btn-primary">
+          <button type="button" class="btn btn-primary" onclick="pesquisarDespesa()">
             <i class="fas fa-search"></i>
           </button>
         </div>
@@ -102,7 +104,8 @@
                 <th></th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id="listaDespesas">
+
             </tbody>
           </table>
         </div>
